tests/cases/match/errors/match-unknown-enum-case.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let value = None;
  match value {
    Missing(_) => {
      return 1;
    }
    _ => {
      return 0;
    }
  }
}
